--- a/ask-multiple-pdfs-main/.github/workflows/deploy.yml
+++ b/ask-multiple-pdfs-main/.github/workflows/deploy.yml
@@ -18,10 +18,7 @@ jobs:
         with:
           python-version: 3.x
 
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-
       - name: Deploy the app
-        run: streamlit run your_app.py
+        run: streamlit run app.py
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
